Fix Watch/Unwatch button height on mobile (#9189)

--- a/source/features/github-bugs.css
+++ b/source/features/github-bugs.css
@@ -153,6 +153,14 @@ div[class^='prc-PageHeader-Description']
 	}
 }
 
+/* Fix Watch/Unwatch button height on mobile */
+/* Info: https://github.com/refined-github/refined-github/issues/9183 */
+/* Test: https://github.com/refined-github/refined-github */
+#responsive-meta-container
+	button[data-testid='notifications-subscriptions-menu-button'] {
+	height: 32px;
+}
+
 /*
 
 Test URLs:
